--- a/style/navbar.css
+++ b/style/navbar.css
@@ -2,16 +2,19 @@
     font-weight: bold;
     color: black;
     text-decoration: none;
+    font-family: "Playfair Display", sans-serif;
+    font-size: 25px !important;
 }
 
 #navbar {
-  background-color: var(--primary-color);
+  background-color: white;
 }
 
 #pages-links .nav-link {
   margin: 0;
-  margin-right: 20px;
+  margin-right: 10px;
   font-size: 14px;
+  font-family: "Jost", sans-serif;
 }
 
 #pages-links a {
